fixed issue education and experience overlaps

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -242,7 +242,6 @@ hr {
     .skills-experiences {
         display: flex;
         flex-direction: column;
-        border: 2px solid red;
         margin-top: 20%;
     }
 
@@ -252,11 +251,11 @@ hr {
     }
 
     .education {
-        margin-top: 100px;
+        /* margin-top: 100px; */
     }
 
     .experiences {
-        margin-top: 35%;
+        margin-top: 50% !important;
     }
 
     .about-me-page h1 {
@@ -270,7 +269,7 @@ hr {
     }
 
     .about-me-info p {
-        font-size: 2.9vw;
+        font-size: 3.6vw;
         line-height: 1.3em;
         margin-top: 5%;
     }  
